# jwo-video-client

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  poetry.toml  pyproject.toml  video_client.py
jwo_video_client/: __main__.py  config.toml
