[tool.poetry]
name = "jwo-video-client"
version = "0.1.0"
description = "Video client for the Just-Walk-Out Shopping System."
authors = ["Ha Phi Hung <haphihung55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiortc = "^1.9.0"
aiohttp = { version = "^3.9.5", extras = ["speedups"] }
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.7.1"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
